--- a/src/main/resources/templates/backend/staff/addOrEdit.html
+++ b/src/main/resources/templates/backend/staff/addOrEdit.html
@@ -20,7 +20,7 @@
 								</div>
 								<div class="content">
 									<form th:action="@{/staff/saveOrUpdate}" method="post"
-										th:object="${staffs}">
+										th:object="${STAFFDTO}" enctype="multipart/form-data">
 										<div class="form-group">
 
 											<label>Staff ID</label> <input class="form-control"
@@ -29,6 +29,10 @@
 										<div class="form-group">
 											<label>Name</label> <input class="form-control"
 												th:field="*{name}" type="text" placeholder="name">
+										</div>
+										<div class="form-group">
+											<label>Photo</label> <input type="file" class="form-control"
+												th:field="*{photo}" placeholder="name">
 										</div>
 										<div class="form-group ">
 											<label>Address</label> <input class="form-control"
