--- a/src/main/resources/templates/backend/staff/list.html
+++ b/src/main/resources/templates/backend/staff/list.html
@@ -22,7 +22,9 @@
 									<table class="table table-striped">
 										<thead>
 											<tr>
-												<th>Staff ID
+												<th>Picture
+												</td>
+												<th>ID
 												</td>
 												<th>Name
 												</td>
@@ -42,17 +44,18 @@
 										</thead>
 										<tbody>
 										<tr th:each="item: ${staff}">
-											<td th:text="${item.staffId}"></td>
+											<td><img th:src="@{'/getimage/' + ${item.photo}}" width="80" height="70"></td>	
+											<td th:text="${item.id}"></td>
 											<td th:text="${item.name}"></td>
 											<td><span th:text="${item.gender}? 'Nam': 'Nu'"></span></td>
 											<td th:text="${item.address}"></td>
-											<td th:text="${item.numberPhone}"></td>
+											<td th:text="${item.phone}"></td>
 											<td th:text="${item.email}"></td>
-											<td th:text="${item.idCard}"></td>
+											<td th:text="${item.idcard}"></td>
 											<td><a class="btn btn-primary"
-												th:href="@{'/staff/edit/' + ${item.staffId}}">Edit</a> | <a
+												th:href="@{'/staff/edit/' + ${item.id}}">Edit</a> | <a
 												class="btn btn-danger"
-												th:href="@{'/staff/delete/' + ${item.staffId}}">Delete</a></td>
+												th:href="@{'/staff/delete/' + ${item.id}}">Delete</a></td>
 										</tr>
 										</tbody>
 									</table>
