--- a/src/main/resources/templates/backend/category/edit.html
+++ b/src/main/resources/templates/backend/category/edit.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<th:block th:include="fragments/head"></th:block>
 <body>
-	<form th:action="@{/backend/category/save}" method="post" th:object="${category}">
-		<input type="text" th:field="*{id}" placeholder="ID"/><br />
-		<input type="text" th:field="*{name}" placeholder="Name"/><br />
-		<input type="submit" value="add"/><br />
-		<input type="button" value="cancel"/>
-	</form>
+	<!-- Page Wrapper -->
+	<div id="wrapper">
+		<th:block th:include="fragments/sidebar"></th:block>
+		<!-- Main Panel -->
+		<div class="main-panel">
+			<th:block th:include="fragments/navbar"></th:block>
+			<!-- Begin Page Content -->
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="header">
+									<h4 class="title">Add new Category</h4>
+									<p class="category">fill out & click save</p>
+								</div>
+								<div class="content">
+								<th:block th:if="${message!=null}">
+									<span th:text="${message}"></span>
+								</th:block>
+									<form th:action="@{/backend/category/save}" method="post"
+										th:object="${category}">
+										<div class="form-group">
+											<input id="id" type="hidden"
+												aria-describedby="name" class="form-control"
+												th:field="*{id}" /> <span th:if="${#fields.hasErrors('id')}" th:errors="*{id}" th:text="Loi id">Test</span>
+										</div>
+										<div class="form-group">
+											<label for="name">Name</label> <input type="text"
+												class="form-control" id="name" aria-describedby="name"
+												th:field="*{name}">
+										</div>
+										<button type="submit" class="btn btn-primary">Save</button>
+										<a th:href="@{'/backend/category/list'}" class="btn btn-default">Cancel</a>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- /.container-fluid -->
+				</div>
+				<!-- /.content -->
+			</div>
+			<!-- End of Main Panel -->
+			<th:block th:include="fragments/footer"></th:block>
+		</div>
+		<th:block th:include="fragments/scripts"></th:block>
 </body>
 </html>
