--- a/src/main/resources/templates/backend/publishingCompany/edit.html
+++ b/src/main/resources/templates/backend/publishingCompany/edit.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<th:block th:include="fragments/head"></th:block>
 <body>
-	<form th:action="@{/backend/publishingCompany/save}" method="post" th:object="${publishingCompany}">
-		<input type="text" th:field="*{id}" placeholder="ID" readonly/><br />
-		<input type="text" th:field="*{name}" placeholder="Name"/><br />
-		<input type="submit" value="add"/><br />
-		<input type="button" value="cancel"/>
-	</form>
+	<!-- Page Wrapper -->
+	<div id="wrapper">
+		<th:block th:include="fragments/sidebar"></th:block>
+		<!-- Main Panel -->
+		<div class="main-panel">
+			<th:block th:include="fragments/navbar"></th:block>
+			<!-- Begin Page Content -->
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="header">
+									<h4 class="title">Add new Publishing Company</h4>
+									<p class="category">fill out & click save</p>
+								</div>
+								<div class="content">
+									<form th:action="@{/backend/publishingCompany/save}"
+										method="post" th:object="${publishingCompany}">
+										<div class="form-group">
+											<input
+												class="form-control" type="hidden" th:field="*{id}"
+												placeholder="ID" />
+										</div>
+										<div class="form-group">
+											<label>Name </label> <input class="form-control"
+												type="text" th:field="*{name}"
+												placeholder="Name" /><br /> <input class="btn btn-primary" type="submit"
+												value="add" /> <input class="btn btn-primary" type="button" value="cancel" />
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
