--- a/src/main/resources/templates/backend/staff/addOrEdit.html
+++ b/src/main/resources/templates/backend/staff/addOrEdit.html
@@ -19,8 +19,8 @@
 									<p class="category">fill out & click save</p>
 								</div>
 								<div class="content">
-									<form th:action="@{/staff/saveOrUpdate}" method="post"
-										th:object="${staffs}">
+									<form th:action="@{/backend/staff/saveOrUpdate}" method="post"
+										th:object="${staff}">
 										<div class="form-group">
 
 											<label>Staff ID</label> <input class="form-control"
@@ -36,7 +36,7 @@
 										</div>
 										<div class="form-group ">
 											<label>Number Phone</label> <input class="form-control"
-												th:field="*{phone}" type="text"
+												th:field="*{numberPhone}" type="text"
 												placeholder="number Phone">
 										</div>
 										<div class="form-group ">
@@ -45,7 +45,7 @@
 										</div>
 										<div class="form-group ">
 											<label>Id Card</label> <input class="form-control"
-												th:field="*{idcard}" type="text" placeholder="ID Card">
+												th:field="*{idCard}" type="text" placeholder="ID Card">
 										</div>
 										<div class="form-group">
 											<label>Gender</label>
@@ -61,7 +61,7 @@
 										</div>
 										<input type="submit" class="btn btn-primary" value="Add"
 											style="margin-right: 50px"> <a
-											class="btn btn-primary" th:href="@{/staff/find}">List All
+											class="btn btn-primary" th:href="@{/backend/staff/find}">List All
 											Staff</a>
 									</form>
 								</div>
