--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,10 +13,10 @@
             <div class="row" style="border: 1px darkgrey solid; border-radius: 10px;width: 50%; margin: 0 auto; padding: 20px;" >
                 <div class="col-sm-12">
                 <h3>Login</h3>
-                <form action="/checklogin" method="post">
+                <form action="/backend/user/checklogin" method="post">
                     <div class="form-group">
                         <label>UserName</label>
-                        <input type="text" class="form-control" name="username" placeholder="Enter UserName">
+                        <input type="text" class="form-control" name="email" placeholder="Enter UserName">
                     </div>
                     <div class="form-group">
                         <label>Password:</label>
