--- a/src/main/resources/templates/backend/user/add.html
+++ b/src/main/resources/templates/backend/user/add.html
@@ -15,7 +15,7 @@
 						<div class="col-md-12">
 							<div class="card">
 								<div class="header">
-									<h4 class="title">Add new Category</h4>
+									<h4 class="title">Add new User</h4>
 									<p class="category">fill out & click save</p>
 								</div>
 								<div class="content">
