--- a/src/main/resources/templates/backend/user/list.html
+++ b/src/main/resources/templates/backend/user/list.html
@@ -15,7 +15,7 @@
 						<div class="col-md-12">
 							<div class="card">
 								<p>
-									<label th:text="'Hello: '+ ${session.USERNAME}"></label><a
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
 										href="logout">Logout</a>
 								</p>
 								<div class="header">
