--- a/src/main/resources/templates/backend/author/list.html
+++ b/src/main/resources/templates/backend/author/list.html
@@ -14,10 +14,24 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card">
+							<p>
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
+										href="logout">Logout</a>
+								</p>
 								<div class="header col-md-6">
-									<h4 class="title">Tac gia</h4>
-									<p class="category">Hien thi toan bo tac gia co san</p>
+									<h4 class="title">Author</h4>
+									<p class="category">shows all available authors</p>
 								</div>
+								<form style="margin-bottom: 20px; float: right;"
+									class="header col-md-6" th:action="@{/backend/reader/find}">
+									<div class="form-inline">
+										<div>
+											<input class="form-control" id="inputPassword2" type="text"
+												name="name" placeholder="Name"> <input
+												class="btn btn-primary" type="submit" value="Find">
+										</div>
+									</div>
+								</form>
 								<div class="content table-responsive table-full-width">
 									<table class="table table-striped">
 										<thead>
