--- a/src/main/resources/templates/backend/book/list.html
+++ b/src/main/resources/templates/backend/book/list.html
@@ -14,10 +14,24 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card">
+								<p>
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
+										href="logout">Logout</a>
+								</p>
 								<div class="header col-md-6">
 									<h4 class="title">Books</h4>
 									<p class="category">shows all available books</p>
 								</div>
+								<form style="margin-bottom: 20px; float: right;"
+									class="header col-md-6" th:action="@{/backend/reader/find}">
+									<div class="form-inline">
+										<div>
+											<input class="form-control" id="inputPassword2" type="text"
+												name="name" placeholder="Name"> <input
+												class="btn btn-primary" type="submit" value="Find">
+										</div>
+									</div>
+								</form>
 								<div class="content table-responsive table-full-width">
 									<table class="table table-striped">
 										<thead>
@@ -43,15 +57,16 @@
 														<span th:text="${category.name} + ' '">Item
 															description here...</span>
 													</th:block></td>
-													<td th:block th:each="publishingCompany : ${publishingCompany}">
-														<span th:text="${publishingCompany.name} + ' '">Item
-															description here...</span>
-													</th:block></td>
-													<td th:text="${item.year}"></td>
-													<td th:text="${item.description}"></td>
+												<td th:block
+													th:each="publishingCompany : ${publishingCompany}"><span
+													th:text="${publishingCompany.name} + ' '">Item
+														description here...</span> </th:block></td>
+												<td th:text="${item.year}"></td>
+												<td th:text="${item.description}"></td>
 												<td><a th:href="@{'/backend/book/edit/' + ${item.id}}"
 													class="btn btn-default">Edit</a></td>
-												<td><a th:href="@{'/backend/book/delete/' + ${item.id}}"
+												<td><a
+													th:href="@{'/backend/book/delete/' + ${item.id}}"
 													class="btn btn-danger">Delete</a></td>
 											</tr>
 										</tbody>
