--- a/src/main/resources/templates/backend/publishingCompany/list.html
+++ b/src/main/resources/templates/backend/publishingCompany/list.html
@@ -14,20 +14,24 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card">
-								<form style="margin-bottom: 20px"
-									th:action="@{/backend/publishingCompany/find}">
-									<div class="form-inline">
-										<div class="col-sm-8">
-											<input class="form-control" type="text" name="name"
-												placeholder="Name" /> <input class="btn btn-primary"
-												type="submit" value="Find" />
-										</div>
-									</div>
-								</form>
+							<p>
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
+										href="logout">Logout</a>
+								</p>
 								<div class="header col-md-6">
 									<h4 class="title">Publishing Company</h4>
 									<p class="category">shows all available Publishing Company</p>
 								</div>
+								<form style="margin-bottom: 20px; float: right;"
+									class="header col-md-6" th:action="@{/backend/reader/find}">
+									<div class="form-inline">
+										<div>
+											<input class="form-control" id="inputPassword2" type="text"
+												name="name" placeholder="Name"> <input
+												class="btn btn-primary" type="submit" value="Find">
+										</div>
+									</div>
+								</form>
 								<div class="content table-responsive table-full-width">
 									<table class="table table-striped">
 										<thead>
