--- a/src/main/resources/templates/backend/reader/find.html
+++ b/src/main/resources/templates/backend/reader/find.html
@@ -14,25 +14,25 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card">
-
+								<p>
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
+										href="logout">Logout</a>
+								</p>
 								<div class="header col-md-6">
 									<h4 class="title">Reader</h4>
 									<p class="category">shows all available readers</p>
 								</div>
-								<form style="margin-bottom: 20px"
-									th:action="@{/backend/reader/find}">
+								<form style="margin-bottom: 20px; float: right;"
+									class="header col-md-6" th:action="@{/backend/reader/find}">
 									<div class="form-inline">
-
-										<div class="col-sm-8">
+										<div>
 											<input class="form-control" id="inputPassword2" type="text"
 												name="name" placeholder="Name"> <input
 												class="btn btn-primary" type="submit" value="Find">
 										</div>
 									</div>
 								</form>
-
 								<div class="content table-responsive table-full-width">
-
 									<table class="table table-striped">
 										<thead>
 											<tr>
@@ -67,7 +67,7 @@
 												<td th:text="${item.birthday}"></td>
 												<td th:text="${item.staff.id}"></td>
 												<td><a th:href="@{'/reader/edit/' + ${item.readerId}}"
-													class="btn btn-default">Edit</a>  <a
+													class="btn btn-default">Edit</a> <a
 													th:href="@{'/reader/delete/' + ${item.readerId}}"
 													class="btn btn-danger">Delete</a></td>
 										</tbody>
