--- a/src/main/resources/templates/backend/staff/list.html
+++ b/src/main/resources/templates/backend/staff/list.html
@@ -14,46 +14,52 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card">
+								<p>
+									<label th:text="'Hello: '+ ${session.Email}"></label><a
+										href="logout">Logout</a>
+								</p>
+								<form style="margin-bottom: 20px" th:action="@{/backend/staff/find}">
+									<div class="form-inline">
+
+										<div class="col-sm-8">
+											<input class="form-control" id="inputPassword2" type="text"
+												name="name" placeholder="Name"> <input
+												class="btn btn-primary" type="submit" value="Find">
+										</div>
+									</div>
+								</form>
 								<div class="header col-md-6">
 									<h4 class="title">Staff</h4>
-									<p class="category">shows all available staffs</p>
+									<p class="category">shows all available staff</p>
 								</div>
 								<div class="content table-responsive table-full-width">
 									<table class="table table-striped">
 										<thead>
 											<tr>
-												<th>Staff ID
-												</td>
-												<th>Name
-												</td>
-												<th>Gender
-												</td>
-												<th>Address
-												</td>
-												<th>Number Phone
-												</td>
-												<th>Email
-												</td>
-												<th>Id Card
-												</td>
-												<th>&nbsp;
-												</td>
+												<th scope="col">Staff ID</th>
+												<th scope="col">Name</th>
+												<th scope="col">Gender</th>
+												<th scope="col">Address</th>
+												<th scope="col">Number Phone</th>
+												<th scope="col">Email</th>
+												<th scope="col">Id Card</th>
+												<th scope="col">&nbsp;</th>
 											</tr>
 										</thead>
 										<tbody>
-										<tr th:each="item: ${staff}">
-											<td th:text="${item.staffId}"></td>
-											<td th:text="${item.name}"></td>
-											<td><span th:text="${item.gender}? 'Nam': 'Nu'"></span></td>
-											<td th:text="${item.address}"></td>
-											<td th:text="${item.numberPhone}"></td>
-											<td th:text="${item.email}"></td>
-											<td th:text="${item.idCard}"></td>
-											<td><a class="btn btn-primary"
-												th:href="@{'/staff/edit/' + ${item.staffId}}">Edit</a> | <a
-												class="btn btn-danger"
-												th:href="@{'/staff/delete/' + ${item.staffId}}">Delete</a></td>
-										</tr>
+											<tr th:each="item: ${staff}">
+												<td th:text="${item.id}"></td>
+												<td th:text="${item.name}"></td>
+												<td><span th:text="${item.gender}? 'Nam': 'Nu'"></span></td>
+												<td th:text="${item.address}"></td>
+												<td th:text="${item.numberPhone}"></td>
+												<td th:text="${item.email}"></td>
+												<td th:text="${item.idCard}"></td>
+												<td><a class="btn btn-primary"
+													th:href="@{'/staff/edit/' + ${item.id}}">Edit</a> <a
+													class="btn btn-danger"
+													th:href="@{'/staff/delete/' + ${item.id}}">Delete</a></td>
+											</tr>
 										</tbody>
 									</table>
 								</div>
@@ -68,6 +74,7 @@
 				<th:block th:include="fragments/scripts"></th:block>
 			</div>
 		</div>
+	</div>
 
 </body>
 </html>
