--- a/src/main/resources/templates/backend/user/view-user.html
+++ b/src/main/resources/templates/backend/user/view-user.html
@@ -1,44 +1,61 @@
-
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>JSP Page</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-        
-        <div class="container">
-            <h2>DANH SACH NGUOI DUNG</h2>
-            <p><a class="btn btn-primary" href="/">ADD USER</a></p>
-            <p><label th:text="'Hello: '+ ${session.USERNAME}"></label><a href="logout">Logout</a></p>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>UserName</th>
-                        <th>Password</th>
-                        <th>FullName</th>
-                        <th>Age</th>
-                        <th>Gender</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="item: ${USERS}">
-                        <td th:text="${item.username}"></td>
-                        <td th:text="${item.password}"></td>
-                        <td th:text="${item.fullname}"></td>
-                        <td th:text="${item.age}"></td>
-                        <td> <span th:text="${item.gender}? 'Nam': 'Nu' "></span> </td>
-                        <td><a class="btn btn-primary btn-sm" th:href="@{'/edit/'+ ${item.username}}">Edit</a> |
-                         <a class="btn btn-danger btn-sm" th:href="@{'/delete/'+ ${item.username}}">Del</a></td>
-                    </tr>
-                    
-                    
-                </tbody>
-            </table>
-        </div>
-    </body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<th:block th:include="fragments/head"></th:block>
+<body>
+	<!-- Page Wrapper -->
+	<div id="wrapper">
+		<th:block th:include="fragments/sidebar"></th:block>
+		<!-- Main Panel -->
+		<div class="main-panel">
+			<th:block th:include="fragments/navbar"></th:block>
+			<!-- Begin Page Content -->
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="header col-md-6">
+									<h4 class="title">Staff</h4>
+									<p class="category">shows all available staffs</p>
+								</div>
+								<div class="content table-responsive table-full-width">
+									<table class="table table-striped">
+										<thead>
+											<tr>
+												<th>UserName</th>
+												<th>FullName</th>
+												<th>Age</th>
+												<th>Gender</th>
+												<th>Action</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:each="item: ${USERS}">
+												<td th:text="${item.username}"></td>
+												<td th:text="${item.fullname}"></td>
+												<td th:text="${item.age}"></td>
+												<td><span th:text="${item.gender}? 'Nam': 'Nu' "></span>
+												</td>
+												<td><a class="btn btn-primary btn-sm"
+													th:href="@{'/user/edit/'+ ${item.id}}">Edit</a> | <a
+													class="btn btn-danger btn-sm"
+													th:href="@{'/user/delete/'+ ${item.id}}">Del</a></td>
+											</tr>
+
+
+										</tbody>
+									</table>
+								</div>
+							</div>
+							<!-- /.container-fluid -->
+						</div>
+						<!-- /.content -->
+					</div>
+					<!-- End of Main Panel -->
+					<th:block th:include="fragments/footer"></th:block>
+				</div>
+				<th:block th:include="fragments/scripts"></th:block>
+			</div>
+		</div>
+</body>
 </html>
