--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
             <div class="row" style="border: 1px darkgrey solid; border-radius: 10px;width: 50%; margin: 0 auto; padding: 20px;" >
                 <div class="col-sm-12">
                 <h3>Login</h3>
-                <form th:action="@{/login}" method="post">
+                <form action="/checklogin" method="post">
                     <div class="form-group">
                         <label>UserName</label>
                         <input type="text" class="form-control" name="username" placeholder="Enter UserName">
@@ -25,8 +25,6 @@
                     <div class="checkbox">
                         <label><input type="checkbox"> Remember me</label>
                     </div>
-                    <p th:if="${param.error}" class="error">Invalid email or password</p>
-        			<p th:if="${param.logout}" class="success">You have been logged out</p>
                     <p style="color: red" th:text="${ERROR}"></p>
                     <button type="submit" class="btn btn-primary">Submit</button>
                     <button type="reset" class="btn btn-primary">Cancel</button>
